<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/textviewsample1"/>
    
    <EditText 
        android:id="@+id/edittext1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <CheckBox android:id="@+id/checkbox1"
        android:paddingBottom="24sp"
        android:paddingTop="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxsample1"
        />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxsample2" />
    
    <RadioGroup 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ListView android:layout_width="fill_parent" android:id="@+id/listView1" android:layout_height="250dp" android:entries="@array/list_name" android:paddingBottom="24sp" android:paddingTop="24sp"></ListView>
        
        <RadioButton android:id="@+id/radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttonsample1"
            android:cursorVisible="false"/>
        
        <RadioButton android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttonsample2"
            />
        
    </RadioGroup>
    
    <Spinner android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/list_name"
        android:prompt="@string/spinnerprompt"

        />
    
    <Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonsample1"
        />
</LinearLayout>

</ScrollView>